# YMAxum

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build_linux.sh  build_macos.sh  build_plugins.bat  build_plugins.sh  build_simple.bat  build_windows.bat  build_windows_optimized.bat  deployment.toml  docker-compose.yml  pre-release-cleanup.bat  sign_plugins.bat  sign_plugins.sh  test_deployment.ps1  vulnerability_db.json  windows_packager.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.trae/rules/: daima-rules.md  project_rules.md  safe-rules.md  user-rules.txt  yilai-rules.md  yilai-rules1.md  yilai-rules2.md
benches/: config_bench.rs  network_bench.rs  serialization_bench.rs
config/: database.toml  environment.toml  http3.toml  logging.toml  performance.toml  plugin.toml  plugin_market_config.json  security.toml  server.toml  version.toml
docs/: GUF集成文档.md  plugin_development_guide.md  业务逻辑详细描述.md  开发计划与进度.md  软著申请指南.md  项目功能与验收.md  项目目录结构.md
docs/security/: security_module.md
docs/soft_license/: adapter_layer.md  business_layer.md  core_layer.md  open_source_components.md  project_adaptation_guide.md  tools_layer.md
examples/: basicapp.rs  pluginexample.rs  sceneadapter.rs
performance_results/: benchmark_report.md  benchmark_results.json
plugins/analytics/: Cargo.toml  manifest.json
plugins/auth/: Cargo.toml  auth.rs  config.toml  manifest.json
plugins/auth/src/: lib.rs
plugins/cache/: cache.rs  manifest.json
plugins/csharp_example/: CSharpExamplePlugin.cs  plugin.toml
plugins/java_example/: JavaExamplePlugin.java  plugin.toml
plugins/javascript_example/: plugin.js  plugin.toml
plugins/log_management/: Cargo.toml
plugins/log_management/src/: lib.rs
plugins/monitoring/: Cargo.toml
plugins/monitoring/src/: lib.rs
plugins/payment/: Cargo.toml
plugins/payment/src/: lib.rs
plugins/python_example/: plugin.py  plugin.toml
plugins/template/guf_plugin_template/: Cargo.toml  README.md
plugins/template/guf_plugin_template/src/: lib.rs
scripts/: automated_code_quality.ps1  automated_config_manager.ps1  automated_dependency_management.ps1  automated_deployment.ps1  automated_documentation_generator.ps1  automated_performance_optimizer.ps1  automated_performance_testing.ps1  automated_plugin_manager.ps1  automated_security_scanner.ps1  automated_test_generation.ps1  automated_version_management.ps1  enhanced_automated_deployment.ps1  enhanced_automated_testing.ps1
src/: error.rs  error_logging.rs  error_recovery.rs  lib.rs  main.rs  main_simple.rs
src/adapter/: mod.rs
src/ai/: intelligent_routing.rs  mod.rs  model_management.rs  performance_optimization.rs
src/bigdata/: dataacquisition.rs  dataanalysis.rs  datastorage.rs  machinelearning.rs  mod.rs
src/blockchain/: datastorage.rs  identity.rs  mod.rs  smartcontract.rs
src/cloud/: autoscaling.rs  helm.rs  kubernetes.rs  mod.rs  multiregion.rs  servicemesh.rs
src/command/: check.rs  command_def.rs  doc_generator.rs  enhanced_parser.rs  error_handling.rs  executor.rs  executor_test.rs  lib.rs  mod.rs  parser.rs  parser_cache.rs  performance_optimizer.rs  security_enhancer.rs  security_scanner.rs  test_generator.rs  transaction.rs  version_manager.rs
src/config_management/: change_audit.rs  config_generation.rs  config_validation.rs  mod.rs  version_management.rs
src/core/: auth_middleware.rs  cache.rs  context.rs  cross_platform.rs  database.rs  deps.rs  deps_test.rs  error_recovery.rs  http_3.rs  iterate_api.rs  lib.rs  middleware.rs  middleware_test.rs  mod.rs  plugin_route_manager.rs  route.rs  route_generator.rs  route_test.rs  service_registry.rs  state.rs  state_test.rs
src/dapp/: blockchain.rs  mod.rs  scaffold.rs
src/deployment/: cloud_platform.rs  deployment_script.rs  deployment_test.rs  mod.rs  rollback_mechanism.rs  status_monitoring.rs
src/dev_tools/: mod.rs
src/devops/: automation.rs  cicd.rs  deployment.rs  mod.rs  monitoring.rs
src/edge/: device_management.rs  edgecache.rs  mod.rs  nodedeployment.rs
src/fraud/: mod.rs
src/guf/: adapter.rs  component_manager.rs  config_sync.rs  event_bus.rs  guf_test.rs  mock_guf_server.rs  mod.rs  templates.rs  version_compatibility.rs
src/i18n/: language.rs  manager.rs  message.rs  mod.rs
src/iot/: data_collection.rs  device_management.rs  edge_cloud.rs  mod.rs
src/iterate/: ai_tool.rs  compatibility.rs  mod.rs
src/lowcode/: code_generation.rs  drag_drop_ui.rs  mod.rs  visual_development.rs
src/microservices/: config_center.rs  distributed_tracing.rs  load_balancing.rs  mod.rs  service_discovery.rs
src/monitoring/: alert_processing.rs  alert_system.rs  metric_collection.rs  mod.rs  monitoring_test.rs  prometheus.rs
src/multi_tenant/: isolation.rs  mod.rs  saas.rs  tenant.rs
src/ops/: config_hot.rs  config_validator.rs  fault_handling.rs  health_check.rs  log.rs  mod.rs  monitor.rs
src/performance/: alert.rs  analyzer.rs  bench.rs  benchmark.rs  benchmark_main.rs  cache_optimizer.rs  concurrency_optimizer.rs  database_optimizer.rs  memory_optimizer.rs  mod.rs  monitor.rs  test_and_tuner.rs
src/plugin/: bus.rs  cross_language.rs  dependency.rs  error.rs  format.rs  hot_reload.rs  lib.rs  manager.rs  market.rs  market_api.rs  mod.rs  permission.rs  runtime.rs  sandbox.rs  sign.rs  version_manager.rs
src/plugin_market/: core.rs  mod.rs  models.rs  repository.rs
src/points/: mod.rs
src/realtime/: collaborative_editing.rs  message_push.rs  mod.rs  websocket.rs
src/referral/: mod.rs
src/rights/: mod.rs
templates/: chat.html  fraud_protection.html  publish_work.html  referral.html  rights_application.html  rights_display.html  transfer_plaza.html  user_growth.html
tests/: api_tests.rs  config_management_tests.rs  dapp_integration_tests.rs  deployment_tests.rs  e2e_tests.rs  guf_integration_tests.rs  guf_integration_with_mock_server.rs  guf_optimization_tests.rs  integration_tests.rs  mock_guf_server.rs  plugin_system_test.rs  scene_adapters_test.rs  serialization_performance_test.rs
(+205 files in other folders)
