[package]
name = "guf_auth_plugin"
version = "1.0.0"
edition = "2021"
authors = ["YMAxum Team <team@ymaxum.com>"]
description = "GUF 身份验证插件，提供基于 GUF 的身份验证功能"
license = "MIT"

[dependencies]
ymaxum = { path = "../.." }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
jwt = "0.16"
ring = "0.17"
base64 = "0.21"

[lib]
crate-type = ["cdylib"]
name = "guf_auth_plugin"

[[bin]]
name = "guf_auth_plugin"
path = "src/bin/main.rs"
