[package]
name = "guf_monitoring_plugin"
version = "1.0.0"
edition = "2021"
authors = ["GUF Team"]
description = "GUF Monitoring Plugin - Monitoring and alerting for GUF ecosystem"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
rand = "0.8"
async-trait = "0.1"
ymaxum = { path = "../../" }

[lib]
name = "guf_monitoring_plugin"
crate-type = ["cdylib"]

[[bin]]
name = "guf_monitoring_plugin_demo"
path = "src/bin/main.rs"
