[package]
name = "guf_plugin_template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "GUF 插件模板"
license = "MIT"

[dependencies]
ymaxum = { path = "../../.." }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]
name = "guf_plugin_template"

[[bin]]
name = "guf_plugin_template"
path = "src/bin/main.rs"
